[package]
name = "rustwlc"
description = "wlc Wayland library bindings for Rust"
version = "0.4.0"
repository = "https://github.com/Immington-Industries/rust-wlc/"
keywords = ["wlc", "Wayland", "compositor", "bindings"]
readme = "README.md"
license = "MIT"
authors = ["Snirk Immington <snirk.immington@gmail.com>", "Timidger <apragmaticplace@gmail.com>"]

[features]
wlc-wayland = ["wayland-sys"]

[dependencies]
libc = "0.2.*"
bitflags = "0.7.*"
wayland-sys = { version = "^0.6.0", features = ["server", "client"], git = "https://github.com/Timidger/wayland-client-rs"}
libc = "^0.2.0"
wayland-server = { version = "0.6.0-alpha", features = ["wl-desktop_shell"], path = "/home/timidger/tmp/wayland-client-rs/wayland-server" }
wayland-client = { version = "^0.6.0", features = ["wl-desktop_shell"], git = "https://github.com/Timidger/wayland-client-rs/" }


[dev-dependencies]
lazy_static = "0.2.*"
